add i18n to the rest of the views

--- a/config/locales/views/defaults/en.yml
+++ b/config/locales/views/defaults/en.yml
@@ -5,3 +5,13 @@ en:
   add: "Add Theme"
   logout: "Logout"
   log_in: "Login"
+
+  nthemes: "Recently added themes"
+  ncomments: "Recently added comments"
+  user: "User"
+  commentto: "Comment to theme"
+  created: "Created at"
+
+  delete: "delete"
+  comment: "Comment"
+  totag: "Want to create a new theme with tags?"
