--- a/config/locales/views/defaults/uk.yml
+++ b/config/locales/views/defaults/uk.yml
@@ -6,3 +6,13 @@ uk:
   add: "Додати тему"
   logout: "Вихiд"
   log_in: "Вхiд"
+
+  nthemes: "Недавно завантажені теми"
+  ncomments: "Недавно завантажені коментарі"
+  user: "Користувач"
+  commentto: "Коментар до теми"
+  created: "Створено"
+
+  delete: "видалити"
+  comment: "Коментувати"
+  totag: "Бажаєте створити нову тему з тегами?"
