add additional responsive design

--- a/config/locales/views/themes/en.yml
+++ b/config/locales/views/themes/en.yml
@@ -13,6 +13,7 @@ en:
   like: "like"
   dislike: "dislike"
   tochosen: "To Chosen"
+  chosen: "Chosen"
 
   tocomment: "Want to create a new comment?"
   sthemes: "Similar themes:"
