--- a/config/locales/views/themes/uk.yml
+++ b/config/locales/views/themes/uk.yml
@@ -13,6 +13,7 @@ uk:
   like: "подобається"
   dislike: "не подобається"
   tochosen: "До обранних"
+  chosen: "Обранні"
 
   tocomment: "Бажаєте створити новий коментар?"
   sthemes: "Схожі теми:"
