--- a/config/locales/views/users/uk.yml
+++ b/config/locales/views/users/uk.yml
@@ -11,7 +11,7 @@ uk:
   log_in: "Увійти"
   confask: "Ви впевнені?"
   update: "Оновити"
-  delete: "Видалити аккаунт"
+  deleteacc: "Видалити аккаунт"
   edit: "Редагувати"
   back: "Назад"
 
