add illustration for home & final pieces

--- a/config/locales/views/defaults/en.yml
+++ b/config/locales/views/defaults/en.yml
@@ -15,3 +15,6 @@ en:
   delete: "delete"
   comment: "Comment"
   totag: "Want to create a new theme with tags?"
+  send: "Send"
+  subject: "Subject"
+  sayh: "Say hello"
