--- a/config/locales/views/defaults/uk.yml
+++ b/config/locales/views/defaults/uk.yml
@@ -16,3 +16,6 @@ uk:
   delete: "видалити"
   comment: "Коментувати"
   totag: "Бажаєте створити нову тему з тегами?"
+  send: "Надіслати"
+  subject: "Тема"
+  sayh: "Привітатись"
