--- a/config/locales/views/themes/uk.yml
+++ b/config/locales/views/themes/uk.yml
@@ -19,3 +19,5 @@ uk:
   sthemes: "Схожі теми:"
   comments: "Коментарі"
   more: "Більше"
+  theme: "Тема"
+  tocreate: "Бажаєте створити нову тему?"
