--- a/config/locales/views/users/en.yml
+++ b/config/locales/views/users/en.yml
@@ -11,7 +11,7 @@ en:
   log_in: "Log In"
   confask: "Are you sure?"
   update: "Update"
-  delete: "Cancel my account"
+  deleteacc: "Cancel my account"
   edit: "Edit"
   back: "Back"
 
