--- a/config/locales/views/themes/en.yml
+++ b/config/locales/views/themes/en.yml
@@ -7,7 +7,7 @@ en:
   title: "Title"
   author: "Author"
   system: "System"
-  views: "Views"
+  view: "Views"
   download: "Download"
   downloadt: "Download theme"
   like: "like"
