--- a/config/locales/views/themes/uk.yml
+++ b/config/locales/views/themes/uk.yml
@@ -7,7 +7,7 @@ uk:
   title: "Назва"
   author: "Автор"
   system: "Система"
-  views: "Перегляди"
+  view: "Перегляди"
   download: "Завантажити"
   downloadt: "Завантажити тему"
   like: "подобається"
